--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- All App Goes from here -->
     <div id="app">
-        
+        <h1>{{ message }}</h1>
     </div>
     
     <!-- My JS Script -->
