Added input to edit messager by user

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- All App Goes from here -->
     <div id="app">
+        <input type="text" v-model=message placeholder="Scrivi Qualcosa">
         <h1>{{ message }}</h1>
     </div>
     
